# scrapehub

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: run_apis.py  run_books.py  run_quotes_all_modes.py
src/scrapehub/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
src/scrapehub/core/: __init__.py  batching.py  browser.py  http_client.py  metrics.py  proxy_pool.py  rate_limiter.py  retry.py  user_agents.py
src/scrapehub/models/: __init__.py  article.py  book.py  quote.py  story.py
src/scrapehub/pipeline/: __init__.py  clean.py  export.py  validate.py
src/scrapehub/scrapers/: __init__.py  base.py  books_static.py  hackernews_api.py  quotes_js.py  quotes_scroll.py  quotes_static.py  wikipedia_api.py
src/scrapehub/selectors/: __init__.py  registry.py
tests/: conftest.py  test_batching.py  test_books_static.py  test_clean_validate.py  test_export.py  test_hackernews_api.py  test_proxy_pool.py  test_quotes_js.py  test_quotes_scroll.py  test_rate_limiter.py  test_retry.py  test_selectors_resilience.py  test_user_agents.py  test_wikipedia_api.py
tests/fixtures/: books_page.html  hackernews_item.json  quotes_page.html  quotes_scroll_api.json  wikipedia_summary.json
