[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "scrapehub"
version = "0.1.0"
description = "Async headless scraping framework for sanctioned sources (books/quotes.toscrape.com, Wikipedia REST, Hacker News Firebase)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Raphael Fakhri" }]
keywords = ["scraping", "playwright", "httpx", "async", "beautifulsoup", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx==0.27.2",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "playwright==1.47.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "typer==0.12.5",
    # typer 0.12.x relies on click <8.2 boolean-flag behaviour.
    "click==8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "respx==0.21.1",
    "ruff==0.6.9",
    "coverage==7.6.1",
]

[project.scripts]
scrapehub = "scrapehub.cli:app"

[project.urls]
Homepage = "https://github.com/RaphaelFakhri/scrapehub"
Repository = "https://github.com/RaphaelFakhri/scrapehub"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapehub"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["scrapehub"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
